# nurseflow-ai-scheduler

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  proxy.ts  security_best_practices_report.md  tsconfig.json  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
components/: admin-login.tsx  demo-data.ts  nurseflow-workspace.tsx  schedule-matrix.tsx  sign-out-button.tsx
docs/: architecture.md  database.md  devpost-demo-runbook.md  devpost-submission.md  privacy.md
lib/: api-error-sanitization.test.ts  confirm-route.test.ts  confirmation-eligibility.test.ts  confirmation-eligibility.ts  constants.ts  export-route.test.ts  import-route.test.ts  importer.test.ts  importer.ts  normalization-candidate.test.ts  normalization-candidate.ts  normalizer.test.ts  normalizer.ts  openai-explanation.ts  openai-normalization.ts  request-body.test.ts  request-body.ts  request-semantics.test.ts  request-semantics.ts  schedule-cache.ts  schedule-schema.test.ts  schedule-schema.ts  solver-adapter.test.ts  solver-adapter.ts  solver-client.test.ts  solver-client.ts  source-workbook-cache.ts  (+9 more)
services/solver/: .env.example  ASSUMPTIONS.md  README.md  pyproject.toml  requirements.txt
services/solver/app/: __init__.py  auth.py  demo.py  export.py  main.py  models.py  normalization.py  solver.py  validation.py
services/solver/tests/: conftest.py  test_business_requirements.py  test_model_limits.py  test_normalization.py  test_request_preferences.py  test_solver_and_api.py  test_validation_boundaries.py
(+34 files in other folders)
